<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/app_name"
    tools:context=".Instructions">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="20dp">

    <TextView
        android:id="@+id/instructions_step1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/instructions_step1"/>

    <ImageView
        android:id="@+id/step1_image"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/step_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructions_step1" />

    <View
        android:id="@+id/hr1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/step1_image"
        tools:layout_editor_absoluteX="20dp" />

     <TextView
         android:id="@+id/instructions_step2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/hr1"
         android:text="@string/instructions_step2"/>

    <ImageView
        android:id="@+id/step2_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/step_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructions_step2" />

    <View
        android:id="@+id/hr2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/step2_image"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/instructions_step3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/hr2"
        android:text="@string/instructions_step3"/>

    <ImageView
        android:id="@+id/step3_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/step_three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructions_step3" />

    <View
        android:id="@+id/hr3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/step3_image"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/instructions_step4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/hr3"
        android:text="@string/instructions_step4"/>

    <ImageView
        android:id="@+id/step4_image"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/step_four"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructions_step4" />

  </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>